使用 Colaboratory 建立

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -45,10 +45,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "HFaLSN41pJtS",
-        "outputId": "13430704-21e7-4a35-8dc1-318be10ca7ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "13430704-21e7-4a35-8dc1-318be10ca7ed"
       },
       "outputs": [
         {
@@ -200,11 +200,11 @@
         "!wget https://github.com/shhuangmust/AI/raw/111-2/fine_food_reviews_1k.csv"
       ],
       "metadata": {
-        "id": "4mGBKc5JuADT",
-        "outputId": "db85fdc0-610f-49bc-aa9e-8161ab2b6916",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4mGBKc5JuADT",
+        "outputId": "db85fdc0-610f-49bc-aa9e-8161ab2b6916"
       },
       "execution_count": 4,
       "outputs": [
@@ -246,11 +246,11 @@
       ],
       "metadata": {
         "id": "_idXFQbkq2XL",
-        "outputId": "179920cc-07cf-425c-b8a6-7a40c19946bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 190
-        }
+        },
+        "outputId": "179920cc-07cf-425c-b8a6-7a40c19946bb"
       },
       "execution_count": 5,
       "outputs": [
@@ -442,10 +442,10 @@
       ],
       "metadata": {
         "id": "BjFahPqhrdaj",
-        "outputId": "50b7f14c-45ae-4d0f-d54a-3212a00ffc44",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "50b7f14c-45ae-4d0f-d54a-3212a00ffc44"
       },
       "execution_count": 6,
       "outputs": [
@@ -548,10 +548,10 @@
       ],
       "metadata": {
         "id": "TcaJQgGo9Znn",
-        "outputId": "8c25d24e-745c-4b26-c540-4ba8416b2b79",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8c25d24e-745c-4b26-c540-4ba8416b2b79"
       },
       "execution_count": 14,
       "outputs": [
@@ -601,11 +601,11 @@
       ],
       "metadata": {
         "id": "FRM9Lb4m9idY",
-        "outputId": "87795532-3809-41d6-9e8b-cea6dc4ebe16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 469
-        }
+        },
+        "outputId": "87795532-3809-41d6-9e8b-cea6dc4ebe16"
       },
       "execution_count": 15,
       "outputs": [
@@ -636,7 +636,7 @@
       "source": [
         "### 換成另一個embedding型態\n",
         "* 此程式常常會當\n",
-        "* 如不想執行，可直接下載檔案 (改執行下面的wget命令，請把#註解拿掉)"
+        "* <font color=red>**如不想執行，可直接下載檔案 (改執行下面的wget命令，請把#註解拿掉)**</font>"
       ],
       "metadata": {
         "id": "dcq0z8A1AfXd"
@@ -661,40 +661,14 @@
     {
       "cell_type": "code",
       "source": [
+        "# 如果不想執行上一格程式，可改執行下面wget命令\n",
         "#!wget https://github.com/joshhu/mustgpt2023/raw/main/Code/5/embedded_1k_reviews.csv"
       ],
       "metadata": {
-        "id": "Nmkoj-X2DZHg",
-        "outputId": "54f21505-2b4f-4690-a6f4-6d98dbf50f87",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Nmkoj-X2DZHg"
       },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-05-18 13:30:07--  https://github.com/joshhu/mustgpt2023/raw/main/Code/5/embedded_1k_reviews.csv\n",
-            "Resolving github.com (github.com)... 140.82.121.3\n",
-            "Connecting to github.com (github.com)|140.82.121.3|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/joshhu/mustgpt2023/main/Code/5/embedded_1k_reviews.csv [following]\n",
-            "--2023-05-18 13:30:07--  https://raw.githubusercontent.com/joshhu/mustgpt2023/main/Code/5/embedded_1k_reviews.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 69669654 (66M) [text/plain]\n",
-            "Saving to: ‘embedded_1k_reviews.csv’\n",
-            "\n",
-            "embedded_1k_reviews 100%[===================>]  66.44M   276MB/s    in 0.2s    \n",
-            "\n",
-            "2023-05-18 13:30:10 (276 MB/s) - ‘embedded_1k_reviews.csv’ saved [69669654/69669654]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 38,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -738,11 +712,11 @@
       ],
       "metadata": {
         "id": "GlS9CT6YBNhb",
-        "outputId": "c4f9e723-46d0-4c17-8367-e059b53fee49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 469
-        }
+        },
+        "outputId": "c4f9e723-46d0-4c17-8367-e059b53fee49"
       },
       "execution_count": 19,
       "outputs": [
@@ -805,10 +779,10 @@
       ],
       "metadata": {
         "id": "PfNJgyNnFpeQ",
-        "outputId": "e4e6d47f-2b11-4b16-a209-4f1f985b26d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e4e6d47f-2b11-4b16-a209-4f1f985b26d2"
       },
       "execution_count": 20,
       "outputs": [
@@ -832,10 +806,10 @@
       ],
       "metadata": {
         "id": "0FUeUnM8GEZ1",
-        "outputId": "309a5b28-47d4-4a45-cc22-440f90d3458e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "309a5b28-47d4-4a45-cc22-440f90d3458e"
       },
       "execution_count": 21,
       "outputs": [
@@ -890,10 +864,10 @@
       ],
       "metadata": {
         "id": "wlwQ-uicGU9b",
-        "outputId": "32d4992e-7f0e-4cf2-f1ef-b91aba26db2b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "32d4992e-7f0e-4cf2-f1ef-b91aba26db2b"
       },
       "execution_count": 22,
       "outputs": [
@@ -935,11 +909,11 @@
       ],
       "metadata": {
         "id": "z8vuC86lGbKk",
-        "outputId": "8f97527b-3c0c-470c-b6ec-fff5f05afe59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 749
-        }
+        },
+        "outputId": "8f97527b-3c0c-470c-b6ec-fff5f05afe59"
       },
       "execution_count": 23,
       "outputs": [
@@ -994,10 +968,10 @@
       ],
       "metadata": {
         "id": "v6mscA0gG5y1",
-        "outputId": "f1136bb3-0fab-4570-c5fc-092ec17d8baf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f1136bb3-0fab-4570-c5fc-092ec17d8baf"
       },
       "execution_count": 24,
       "outputs": [
@@ -1043,11 +1017,11 @@
       ],
       "metadata": {
         "id": "UUstbQ4OHF92",
-        "outputId": "520683a7-5192-42fa-9289-043304286138",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 628
-        }
+        },
+        "outputId": "520683a7-5192-42fa-9289-043304286138"
       },
       "execution_count": 25,
       "outputs": [
@@ -1085,11 +1059,11 @@
       ],
       "metadata": {
         "id": "fBqadLxaHNjt",
-        "outputId": "3f70ac44-d527-4e84-e5aa-c01937a1eabf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 628
-        }
+        },
+        "outputId": "3f70ac44-d527-4e84-e5aa-c01937a1eabf"
       },
       "execution_count": 26,
       "outputs": [
@@ -1127,11 +1101,11 @@
       ],
       "metadata": {
         "id": "BDvrOVtnHRt5",
-        "outputId": "bb234aa2-63dc-4098-9ac4-07d2cc158e92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 628
-        }
+        },
+        "outputId": "bb234aa2-63dc-4098-9ac4-07d2cc158e92"
       },
       "execution_count": 27,
       "outputs": [
@@ -1188,10 +1162,10 @@
       ],
       "metadata": {
         "id": "C4yS56IIIOeX",
-        "outputId": "e2f3749b-827e-4e64-9780-61b595182bf7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e2f3749b-827e-4e64-9780-61b595182bf7"
       },
       "execution_count": 28,
       "outputs": [
@@ -1223,10 +1197,10 @@
       ],
       "metadata": {
         "id": "SzMIuNBDIUIz",
-        "outputId": "91e0b755-d256-4ae2-9712-fcca647954bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "91e0b755-d256-4ae2-9712-fcca647954bb"
       },
       "execution_count": 29,
       "outputs": [
@@ -1281,11 +1255,11 @@
       ],
       "metadata": {
         "id": "R0bR6KO5IXlH",
-        "outputId": "5d8a1239-bc59-40b0-ce0d-bccc7c8e6329",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 469
-        }
+        },
+        "outputId": "5d8a1239-bc59-40b0-ce0d-bccc7c8e6329"
       },
       "execution_count": 30,
       "outputs": [
@@ -1376,10 +1350,10 @@
       ],
       "metadata": {
         "id": "rEbefKMBItGu",
-        "outputId": "7bce316b-f42b-4c44-ead1-8520feac3748",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7bce316b-f42b-4c44-ead1-8520feac3748"
       },
       "execution_count": 32,
       "outputs": [
@@ -1404,10 +1378,10 @@
       ],
       "metadata": {
         "id": "02xlNwxbIw7v",
-        "outputId": "0ca175f8-f7a6-4d48-d19c-fc85df25ffb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0ca175f8-f7a6-4d48-d19c-fc85df25ffb1"
       },
       "execution_count": 33,
       "outputs": [
@@ -1432,10 +1406,10 @@
       ],
       "metadata": {
         "id": "imvB_MTDIz7F",
-        "outputId": "8fa1ea56-3e99-42cc-c77a-7a56df4e4589",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8fa1ea56-3e99-42cc-c77a-7a56df4e4589"
       },
       "execution_count": 34,
       "outputs": [
@@ -1456,10 +1430,10 @@
       ],
       "metadata": {
         "id": "A7GvvcSdI4Gk",
-        "outputId": "d6fcb87c-c776-4612-feb2-c2ff7f7db8ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d6fcb87c-c776-4612-feb2-c2ff7f7db8ff"
       },
       "execution_count": 35,
       "outputs": [
@@ -1480,10 +1454,10 @@
       ],
       "metadata": {
         "id": "767dMA7cI7BF",
-        "outputId": "05222321-7a3b-491e-a73a-c0b033e72642",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "05222321-7a3b-491e-a73a-c0b033e72642"
       },
       "execution_count": 36,
       "outputs": [
