使用 Colaboratory 建立

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "HFaLSN41pJtS",
         "colab": {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "odSrZTSTqAMh"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
       "metadata": {
         "id": "6IxiggOHqRSN"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
         "id": "4mGBKc5JuADT",
         "outputId": "db85fdc0-610f-49bc-aa9e-8161ab2b6916"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +252,7 @@
         },
         "outputId": "179920cc-07cf-425c-b8a6-7a40c19946bb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +447,7 @@
         },
         "outputId": "50b7f14c-45ae-4d0f-d54a-3212a00ffc44"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,12 +464,12 @@
     {
       "cell_type": "code",
       "source": [
-        "openai.api_key = \"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\""
+        "openai.api_key = \"請輸入你自己的api-key\""
       ],
       "metadata": {
         "id": "_kj6xyk17d-Z"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +502,7 @@
       "metadata": {
         "id": "gaXYHjPlrjGl"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -514,7 +514,7 @@
       "metadata": {
         "id": "bTFZSDzKCfqX"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -553,7 +553,7 @@
         },
         "outputId": "8c25d24e-745c-4b26-c540-4ba8416b2b79"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -607,7 +607,7 @@
         },
         "outputId": "87795532-3809-41d6-9e8b-cea6dc4ebe16"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +667,7 @@
       "metadata": {
         "id": "Nmkoj-X2DZHg"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -718,7 +718,7 @@
         },
         "outputId": "c4f9e723-46d0-4c17-8367-e059b53fee49"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +784,7 @@
         },
         "outputId": "e4e6d47f-2b11-4b16-a209-4f1f985b26d2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -811,7 +811,7 @@
         },
         "outputId": "309a5b28-47d4-4a45-cc22-440f90d3458e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,7 +869,7 @@
         },
         "outputId": "32d4992e-7f0e-4cf2-f1ef-b91aba26db2b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -915,7 +915,7 @@
         },
         "outputId": "8f97527b-3c0c-470c-b6ec-fff5f05afe59"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -973,7 +973,7 @@
         },
         "outputId": "f1136bb3-0fab-4570-c5fc-092ec17d8baf"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1023,7 +1023,7 @@
         },
         "outputId": "520683a7-5192-42fa-9289-043304286138"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1065,7 +1065,7 @@
         },
         "outputId": "3f70ac44-d527-4e84-e5aa-c01937a1eabf"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1107,7 +1107,7 @@
         },
         "outputId": "bb234aa2-63dc-4098-9ac4-07d2cc158e92"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1167,7 +1167,7 @@
         },
         "outputId": "e2f3749b-827e-4e64-9780-61b595182bf7"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1202,7 +1202,7 @@
         },
         "outputId": "91e0b755-d256-4ae2-9712-fcca647954bb"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1261,7 +1261,7 @@
         },
         "outputId": "5d8a1239-bc59-40b0-ce0d-bccc7c8e6329"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1317,7 +1317,7 @@
       "metadata": {
         "id": "rcSU6idXIlwR"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1355,7 +1355,7 @@
         },
         "outputId": "7bce316b-f42b-4c44-ead1-8520feac3748"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1383,7 +1383,7 @@
         },
         "outputId": "0ca175f8-f7a6-4d48-d19c-fc85df25ffb1"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1411,7 +1411,7 @@
         },
         "outputId": "8fa1ea56-3e99-42cc-c77a-7a56df4e4589"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1435,7 +1435,7 @@
         },
         "outputId": "d6fcb87c-c776-4612-feb2-c2ff7f7db8ff"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1459,7 +1459,7 @@
         },
         "outputId": "05222321-7a3b-491e-a73a-c0b033e72642"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
