--- a/13.one_hot.ipynb
+++ b/13.one_hot.ipynb
@@ -775,7 +775,7 @@
       "source": [
         "## One hot encoding\n",
         "利用OneHotEcoder函數，將Country欄位進行Ont-Hot encoding編碼\n",
-        "<table><tr><td>Australia</td><td>Ireland</td><td>Taiwan</td></tr></table>"
+        "<table><tr><td>Australia(0)</td><td>Ireland(1)</td><td>Taiwan(2)</td></tr></table>"
       ]
     },
     {
