--- a/10.wordnet.ipynb
+++ b/10.wordnet.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "10.wordnet.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -19,23 +17,12 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/shhuangmust/AI/blob/110-2/10.wordnet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "# 中文wordnet\n",
         "完整用法：https://github.com/lopentu/CwnGraph\n",
         "\n",
-        "- 要表達字詞，必須透過向量的表示法，例如one-hot encoding\n",
-        "- 然而一個字詞代表一個向量維度，會造成向量維度空間太大，造成之後計算困難，因此必須要把相似字詞做合併\n",
-        "- 早期的用法是透過查詢wordnet。wordnet是透過人工的方式，建立起字詞之間的關係\n",
+        "- 早期利用字詞表達文章的用法，可以透過查詢wordnet，找出查詢字跟那些字有關係。\n",
+        "- wordnet是透過人工的方式，建立起字詞之間的關係\n",
         "- 本範例介紹中文的wordnet，查詢\"頭\"這個字，看有多少跟\"頭\"相關的字詞\n",
         "- 另外介紹英文的wordnet，查詢跟\"dog\"相似的字詞"
       ],
@@ -50,95 +37,48 @@
       ],
       "metadata": {
         "id": "2E02jlhZ8rr7",
-        "outputId": "1e0b7b2c-fe79-4c8e-b3f3-e5f8c47a8f3c",
+        "outputId": "f5138d1c-facf-4714-f64b-dce8395ee182",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: CwnGraph in /usr/local/lib/python3.7/dist-packages (0.2.0)\n",
-            "Requirement already satisfied: gdown in /usr/local/lib/python3.7/dist-packages (from CwnGraph) (4.2.2)\n",
-            "Requirement already satisfied: requests[socks] in /usr/local/lib/python3.7/dist-packages (from gdown->CwnGraph) (2.23.0)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from gdown->CwnGraph) (4.63.0)\n",
-            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.7/dist-packages (from gdown->CwnGraph) (4.6.3)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from gdown->CwnGraph) (1.15.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from gdown->CwnGraph) (3.6.0)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown->CwnGraph) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown->CwnGraph) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown->CwnGraph) (2021.10.8)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown->CwnGraph) (2.10)\n",
-            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown->CwnGraph) (1.7.1)\n"
+            "Requirement already satisfied: CwnGraph in /usr/local/lib/python3.10/dist-packages (0.4.0)\n",
+            "Requirement already satisfied: gdown>=4.4.0 in /usr/local/lib/python3.10/dist-packages (from CwnGraph) (4.6.6)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from CwnGraph) (2.31.0)\n",
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.10/dist-packages (from CwnGraph) (3.8.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from gdown>=4.4.0->CwnGraph) (3.13.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from gdown>=4.4.0->CwnGraph) (1.16.0)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from gdown>=4.4.0->CwnGraph) (4.66.1)\n",
+            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.10/dist-packages (from gdown>=4.4.0->CwnGraph) (4.11.2)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk->CwnGraph) (8.1.7)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk->CwnGraph) (1.3.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk->CwnGraph) (2023.6.3)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->CwnGraph) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->CwnGraph) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->CwnGraph) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->CwnGraph) (2023.11.17)\n",
+            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4->gdown>=4.4.0->CwnGraph) (2.5)\n",
+            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.10/dist-packages (from requests->CwnGraph) (1.7.1)\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# 將`cwn_graph.pyobj`上傳到colab目錄\n",
-        "- cwn_graph.pyobj下載連結：https://github.com/joshhu/nlp_must2022/raw/main/cwn_graph.pyobj\n",
-        "- 下載完成後，上傳至colab目錄，需等待上傳結束後，才可以繼續下一步執行 (上傳需數分鐘)"
-      ],
-      "metadata": {
-        "id": "-1W4TtOp-L44"
-      }
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kuuu-WmF8M5u",
-        "outputId": "b6d893f3-ebec-4072-ea29-65ee76c75091"
+        "outputId": "a0e64bc8-ac1d-4c7d-ac2a-efe26d23f1dd"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CWN data installed\n"
-          ]
-        }
-      ],
-      "source": [
-        "from pprint import pprint\n",
-        "from CwnGraph import CwnBase\n",
-        "CwnBase.install_cwn(\"cwn_graph.pyobj\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from CwnGraph import CwnBase\n",
-        "cwn = CwnBase()"
-      ],
-      "metadata": {
-        "id": "TRJpglUX8eX7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "lemmas = cwn.find_lemma(\"頭\")\n",
-        "lemmas"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IyFF5sOw9QQj",
-        "outputId": "e4fb2717-4e5d-49e4-ff2a-87111518777c"
-      },
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,12 +219,19 @@
               " <CwnLemma: 派頭_1>,\n",
               " <CwnLemma: 頭腦_1>,\n",
               " <CwnLemma: 指頭_1>,\n",
-              " <CwnLemma: 開頭兒_1>]"
+              " <CwnLemma: 開頭兒_1>,\n",
+              " <CwnLemma: 心頭_1>]"
             ]
           },
           "metadata": {},
           "execution_count": 4
         }
+      ],
+      "source": [
+        "from CwnGraph import CwnImage\n",
+        "cwn = CwnImage.latest()\n",
+        "lemmas = cwn.find_lemma(\"頭\")\n",
+        "lemmas"
       ]
     },
     {
