--- a/16.gensim_wiki.ipynb
+++ b/16.gensim_wiki.ipynb
@@ -3,12 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "16.gensim_wiki.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "collapsed_sections": [],
-      "machine_shape": "hm",
-      "include_colab_link": true
+      "machine_shape": "hm"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,16 +17,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/shhuangmust/AI/blob/110-2/16.gensim_wiki.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Ssk5BSNbelCF"
       },
       "source": [
@@ -38,32 +25,30 @@
         "- 之前介紹過，利用分散式表示法來表達字詞向量，例如PMI、SVD..統計法..等\n",
         "- 2013年神經網路盛行後，Tomas Mikolov利用神經網路訓練方式，來獲得字詞的表達向量，獲得很棒的成果。一般認為是利用神經網路模擬人類的理解能力，獲得不錯的分布空間所得到的成果。\n",
         "- 本範例以維基百科wiki部分資料作範例\n",
-        "- 資料來源：https://dumps.wikimedia.org/zhwiki/20220401/zhwiki-20220401-pages-articles-multistream.xml.bz2\n",
+        "- 資料來源：https://dumps.wikimedia.org/zhwiki/20231201/zhwiki-20231201-pages-articles-multistream1.xml-p1p187712.bz2\n",
         "- 利用結巴分詞(jieba)進行斷詞，gensim套件進行word2vec計算\n",
         "- 本範例約需1小時長時間執行\n"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "Act-waJIjyD4"
-      },
       "source": [
-        "# ! wget https://dumps.wikimedia.org/zhwiki/20220401/zhwiki-20220401-pages-articles-multistream.xml.bz2\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!wget https://dumps.wikimedia.org/zhwiki/20220401/zhwiki-20220401-pages-articles-multistream1.xml-p1p187712.bz2"
+        "!wget https://dumps.wikimedia.org/zhwiki/20231201/zhwiki-20231201-pages-articles-multistream1.xml-p1p187712.bz2"
       ],
       "metadata": {
         "id": "ylVzFulsmgzB"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### opencc是繁簡轉換工具"
+      ],
+      "metadata": {
+        "id": "eMIti7ru3701"
+      }
     },
     {
       "cell_type": "code",
@@ -77,6 +62,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### gensim是訓練word2vec的函式庫"
+      ],
+      "metadata": {
+        "id": "SQCWrmFJ4Mps"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1BIoy7K5eqIS"
@@ -84,7 +78,7 @@
       "source": [
         "from gensim.corpora import WikiCorpus\n",
         "\n",
-        "wiki_corpus = WikiCorpus('zhwiki-20220401-pages-articles-multistream1.xml-p1p187712.bz2', dictionary={})"
+        "wiki_corpus = WikiCorpus('zhwiki-20231201-pages-articles-multistream1.xml-p1p187712.bz2', dictionary={})"
       ],
       "execution_count": null,
       "outputs": []
@@ -110,6 +104,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 把wiki的資料檔案，轉換成連續文字的txt檔案"
+      ],
+      "metadata": {
+        "id": "AjOTHZGR5nCE"
+      }
     },
     {
       "cell_type": "code",
@@ -166,19 +169,19 @@
         "seed = 666\n",
         "sg = 0\n",
         "window_size = 10\n",
-        "vector_size = 100\n",
+        "#vector_size = 100\n",
         "min_count = 1\n",
         "workers = 8\n",
-        "epochs = 5\n",
+        "#epochs = 5\n",
         "batch_words = 10000\n",
         "\n",
         "train_data = word2vec.LineSentence('seg.txt')\n",
         "model = word2vec.Word2Vec(\n",
         "    train_data,\n",
         "    min_count=min_count,\n",
-        "    size=vector_size,\n",
+        "    #size=vector_size,\n",
         "    workers=workers,\n",
-        "    iter=epochs,\n",
+        "    #iter=epochs,\n",
         "    window=window_size,\n",
         "    sg=sg,\n",
         "    seed=seed,\n",
@@ -213,9 +216,7 @@
       "metadata": {
         "id": "E235am9EVIuG"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
