--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -1382,7 +1382,7 @@
       },
       "source": [
         "### 翻譯\n",
-        "提供語言對（例如「translation_en_to_fr」），則可以使用預設模型，但最簡單的方法是在模型中心（hub）選擇要使用的模型"
+        "提供語言對（例如「translation_Chinese_to_English」），則可以使用預設模型，但最簡單的方法是在模型中心（hub）選擇要使用的模型"
       ]
     },
     {
