--- a/Fine_tuning_a_model_with_the_Trainer.ipynb
+++ b/Fine_tuning_a_model_with_the_Trainer.ipynb
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8aj8MKXg2OE7",
         "colab": {
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Cju0jFH72OE7",
         "colab": {
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "695Hdu7z2OE8"
       },
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "kMEg7Tay2OE8",
         "colab": {
@@ -399,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "4d9isgES2OE8"
       },
@@ -526,6 +526,31 @@
       "source": [
         "trainer.train()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 計算模型表現的度量方法\n",
+        "- 計算408個預測中，有幾個是和真值一模一樣的"
+      ],
+      "metadata": {
+        "id": "6AU5vSCzwvwL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import evaluate\n",
+        "\n",
+        "predictions = trainer.predict(tokenized_datasets[\"validation\"])\n",
+        "metric = evaluate.load(\"glue\", \"mrpc\")\n",
+        "metric.compute(predictions=preds, references=predictions.label_ids)\n"
+      ],
+      "metadata": {
+        "id": "7axQJKKRwUey"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
