--- a/Youtube_字幕產生.ipynb
+++ b/Youtube_字幕產生.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/shhuangmust/AI/blob/112-1/Youtube_%E5%AD%97%E5%B9%95%E7%94%A2%E7%94%9F.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shhuangmust/AI/blob/112-2/Youtube_%E5%AD%97%E5%B9%95%E7%94%A2%E7%94%9F.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -42,7 +42,7 @@
         "id": "TZyZkfOWMCp_",
         "outputId": "ddcacf56-9731-4112-9055-bd404a7d45fb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,12 +122,12 @@
       "cell_type": "code",
       "source": [
         "#輸入想要製作字幕的影片\n",
-        "url = 'https://youtu.be/U6sr_tedxuM'"
+        "url = 'https://www.youtube.com/shorts/EkzXif-p2Qg'"
       ],
       "metadata": {
         "id": "DrRJOi9CL-hn"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "gxDw_7YJFLQF"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
         },
         "outputId": "3e6500a4-154c-4fcf-8e53-b6a5cbd7f66f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "afCkF3b9F3a3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +198,7 @@
       "metadata": {
         "id": "-rMA8bEgIBBe"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     }
   ]
